# anki-cli

./: LICENSE  README.md  pyproject.toml
src/anki_cli/: __init__.py  _collection.py  _pylib.py  _serialize.py  cli.py  config.py  mcp_server.py  ops.py  paths.py
